# ob1_workspace

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: claude-review.yml  ob1-review.yml  welcome.yml
.harness/: HARNESS_REPORT.md  config.yml  domains.yml  enforcement.yml  knowledge.yml  principles.yml  quality.yml
.planning/: PROJECT.md  ROADMAP.md
cli/: package-lock.json  package.json
cli/src/: cli.ts  config.ts
dashboards/_template/: README.md
docs/: API_REFERENCE.md  BACOWR_API.md  COMMANDS.md  DEPLOY_GUIDE.md  RUNBOOK.md  companion-prompts.md  faq.md  getting-started.md
docs/design-docs/: core-beliefs.md  escalation-boundaries.md  long-session-protocol.md  process-patterns.md
help/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  SECURITY.md  metadata.schema.json  open-brain-companion.skill
integrations/_template/: README.md
integrations/discord-capture/: README.md
knowledge-base/: ARCHITECTURE.md  INDEX.md  VISION.md
knowledge-base/_system/: compilation-log.md  coverage-map.md  evolution-queue.md  health-report.md
knowledge-base/_templates/: cheat-sheet.md  index.md  (+6 more)
openclaw-seed/: exec-approvals.json  install.sh  nodes-config.json  openclaw.json  workspace-state.json
server/: index.ts
theleak/: EXECUTION_PLAN.md
theleak/rust/: Cargo.toml
theleak/rust/crates/snowball-agent/: Cargo.toml
theleak/rust/crates/snowball-agent/src/: agent.rs  agent_gen.rs  extractor.rs  gamechanger.rs  knowledge.rs  lib.rs  main.rs  output.rs  skill_gen.rs
(+273 files in other folders)
