[workspace]
members = [
    "crates/snowball-agent",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.4"
clap = { version = "4.3", features = ["derive"] }
crossterm = "0.28"
dirs = "5.0"
futures = "0.3"
pulldown-cmark = "0.13"
reqwest = { version = "0.11", features = ["json", "stream"] }
rustyline = "15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = "5.0"
tokio = { version = "1", features = ["full"] }
# Add other common dependencies as needed
